tdf#172113 sw MaxAscentDescent: ignore PostItsPortion

This fixes an inherited-from-OOo bug for ODT and DOC/X.

If the only thing on a line is a comment,
then don't set the MaxAscentDescent to 1.

Instead, it should remain at zero
so that things like CalcHeightOfLastLine
use the font metrics to calculate a reasonable height.

SAFETY FACTOR: unsafe, but necessary
This could affect older ODT files,
because it is a bug that is being fixed.

make CppunitTest_sw_ooxmlexport25 \
    CPPUNIT_TEST_NAME=testTdf172113_linespacingComment

Change-Id: If4a29ce47c5e83697015feaade11243937e6d0c2
Signed-off-by: Miklos Vajna <vmiklos@collabora.com>
Reviewed-on: https://gerrit.collaboraoffice.com/c/online/+/7513
Tested-by: Jenkins CPCI <releng@collaboraoffice.com>